--- a/ec_frontend/src/components/Home/Home.css
+++ b/ec_frontend/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url('../../assets/cover.jfif');
+  background-image: url('../../assets/car.jfif');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -46,7 +46,7 @@
   position: absolute;
   top: 0%;
   left: 0;
-  clip-path: polygon(100% 68%, 0 100%, 100% 100%);
+  clip-path: polygon(100% 100%, 0 100%, 100% 100%);
   max-width: 100%;
 }
 
